tests/rosetta/transpiler/OCaml/file-input-output-3.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/file-input-output-3.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "File-input-output-3" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/file-input-output-3.ml", line 56, characters 31-51:
56 |     with Continue -> ()) ((try List.assoc (inp) !fs with Not_found -> (Obj.magic 0))) with Break -> ());
                                    ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
